apps/ict/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ict
  namespace: development
spec:
  selector:
    matchLabels:
      app: ict
  template:
    metadata:
      labels:
        app: ict
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
      - name: ict
        image: ghcr.io/indy-center/controller-tools:latest
        command: ["npx", "tsx", "src/server.ts"]
        ports:
        - containerPort: 3000
          protocol: TCP
        startupProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 15
          failureThreshold: 60
          periodSeconds: 5
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 45
          periodSeconds: 30
          timeoutSeconds: 10
        resources:
          requests:
            cpu: 50m       # ~1.5-2x your average usage
            memory: 128Mi  # Slightly above your average memory usage
          limits:
            cpu: 250m      # Allowing room for CPU spikes; adjust if needed
            memory: 512Mi  # Providing headroom for memory spikes
