apps/ict/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ict
spec:
  selector:
    app: ict
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
