apps/ict/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ict
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - tools.dev.zid-internal.com
        - tools.next.zidartcc.org
      secretName: ict-tls
  rules:
    - host: tools.dev.zid-internal.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ict
                port:
                  number: 80 
    - host: tools.next.zidartcc.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ict
                port:
                  number: 80
